--- a/Areas/Tenant/Views/Tenant/Index.cshtml
+++ b/Areas/Tenant/Views/Tenant/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
 
     var hasRentalProperty = ViewBag.HasRentalProperties;
+    ViewData["Title"] = "Tenant";
 }
-@ViewData["Title"] = "Tenant";
 @if (hasRentalProperty)
 {
     <div class="container-fluid">
