--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
         @* Header navbar with logo *@
         <div class="nav-header">
             <div class="brand-logo">
-                <a href="index.html">
+                <a asp-action="Home" asp-controller="HomePage" asp-area="Introduction">
                     <b class="logo-abbr"><img src="../images/logo.png" alt=""> </b>
                     <span class="logo-compact"><img src="../images/logo-compact.png" alt=""></span>
                     <span class="brand-title">
